深夜网抑云start

--- a/src/assets/css/them.scss
+++ b/src/assets/css/them.scss
@@ -2,7 +2,8 @@
 * 定义基本的主题颜色
 *
 */
+
 $baseColor: #409EFF;
 $borderColor: #717171;
 $globalColor: #545c64;
-$globalBgColor: #293038;
+$globalBgColor: #c20c0c;
